--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "MvcMovieContext": "Server=DESKTOP-ICKJC3N;Database=MvcMovieContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MvcMovieContext": "Server=IAMALUTHERAN;Database=MvcMovieContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
